kube/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      component: login
  template:
    metadata:
      labels:
        component: login
    spec:
      containers:
        - name: login
          image: sbalasubramanian14/login-api
          ports:
            - containerPort: 5001
