kube/systems-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: systems-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: systems
  template:
    metadata:
      labels:
        component: systems
    spec:
      containers:
        - name: systems
          image: sbalasubramanian14/systems-api
          ports:
            - containerPort: 5002
