kube/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: users
  template:
    metadata:
      labels:
        component: users
    spec:
      containers:
        - name: users
          image: sbalasubramanian14/users-api
          ports:
            - containerPort: 5000
