kube/login-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: login
  ports:
    - port: 5001
      targetPort: 5001
