kube/systems-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: systems-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: systems
  ports:
    - port: 5002
      targetPort: 5002
