kube/todo-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: todo
  ports:
    - port: 5003
      targetPort: 80
