kube/users-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: users
  ports:
    - port: 5000
      targetPort: 5000
