kube/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/login
            backend:
              serviceName: login-cluster-ip-service
              servicePort: 5001
          - path: /api/v1/users
            backend:
              serviceName: users-cluster-ip-service
              servicePort: 5000
          - path: /api/v2/users
            backend:
              serviceName: users-cluster-ip-service
              servicePort: 5000
          - path: /api/v1/systems
            backend:
              serviceName: systems-cluster-ip-service
              servicePort: 5002
          - path: /api/v1/Todo
            backend:
              serviceName: todo-cluster-ip-service
              servicePort: 5003
